fix(interview): improve last question handling and skipped question scoring
- Disable skip button for the last question and replace with submit button
- Assign 0 marks for skipped questions (previously only answered questions were scored)